--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,13 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Install Node.JS LTS
+    - name: Setup Node.JS LTS
       uses: actions/setup-node@v3
       with:
         node-version: lts/*
+
+    - name: Setup pNPM
+      uses: pnpm/action-setup@v2
 
     - name: Install Dependencies
       run: pnpm install
