--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,8 @@ jobs:
       with:
         node-version: lts/*
 
-    - name: Setup pNPM
-      uses: pnpm/action-setup@v2
-      with:
-        version: latest
-
     - name: Install Dependencies
-      run: pnpm install
+      run: yarn install
 
     - name: Lint Project
       run: npm run lint
