--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "Unusual Norm",
   "license": "MIT",
   "dependencies": {
+    "@sapphire/discord.js-utilities": "^5.1.1",
     "@sapphire/framework": "^3.1.3",
+    "better-sqlite3": "^7.6.2",
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^1.7.4",
     "discord.js": "13.x",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/better-sqlite3": "^7.6.2",
     "@types/dotenv-defaults": "^2.0.1",
     "@types/node": "^18.11.5",
     "@types/validatorjs": "^3.15.0",
