--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
-  "name": "src",
+  "name": "omnom",
   "version": "1.0.0",
   "description": "My not-so general purpose Discord bot, OmNom!",
-  "main": "index.js",
+  "main": "dist/client.js",
+  "type": "module",
   "repository": "github:UnusualNorm/OmNom",
   "scripts": {
-    "build": "tsc",
-    "dev:bridge": "npm run build && npm run start:bridge",
-    "dev.debug:bridge": "npm run build && node --inspect-brk dist/bridge.js",
+    "build": "rimraf dist/ && tsc",
+    "dev:server": "npm run build && npm run start:server",
     "dev:client": "npm run build && npm run start:client",
-    "dev.debug:client": "npm run build && node --inspect-brk dist/client.js",
+    "dev:bot": "npm run build && npm run start:bot",
     "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
     "lint": "eslint",
-    "lint.fix": "eslint --fix",
-    "start:bridge": "node dist/bridge.js",
-    "start:client": "node dist/client.js"
+    "start:server": "node dist/server.js",
+    "start:client": "node dist/client.js",
+    "start:bot": "node dist/bot.js"
   },
   "keywords": [],
   "author": "Unusual Norm",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/framework": "^3.1.3",
+    "@sapphire/decorators": "^6.0.0",
+    "@sapphire/discord.js-utilities": "^6.0.0",
+    "@sapphire/fetch": "^2.4.1",
+    "@sapphire/framework": "4.x",
+    "@sapphire/plugin-subcommands": "^4.0.0",
+    "@sapphire/utilities": "^3.11.0",
+    "discord-api-types": "0.37.27",
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^1.7.4",
-    "discord.js": "13.x",
+    "discord.js": "14.x",
     "dotenv-defaults": "^5.0.2",
-    "validatorjs": "^3.22.1"
+    "env-var": "^7.3.0",
+    "form-data": "^4.0.0",
+    "knex": "^2.4.0",
+    "socks-proxy-agent": "^7.0.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
+    "@tsconfig/node-lts-strictest-esm": "^18.12.1",
     "@types/dotenv-defaults": "^2.0.1",
     "@types/node": "^18.11.5",
-    "@types/validatorjs": "^3.15.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   }
 }
