--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off"
+  }
 }
