Fix up env, docker

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "build": "rimraf dist/ && tsc",
     "dev:server": "npm run build && npm run start:server",
-    "dev:client": "npm run build && npm run start:client",
+    "dev:cluster": "npm run build && npm run start:cluster",
     "dev:bot": "npm run build && npm run start:bot",
     "fmt": "prettier --write .",
     "lint": "eslint",
     "start:server": "node dist/server.js",
-    "start:client": "node dist/client.js",
+    "start:cluster": "node dist/cluster.js",
     "start:bot": "node dist/bot.js"
   },
   "keywords": [],
@@ -30,9 +30,7 @@
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^1.7.4",
     "discord.js": "14.x",
-    "dotenv-defaults": "^5.0.2",
     "env-var": "^7.3.0",
-    "form-data": "^4.0.0",
     "knex": "^2.4.0",
     "socks-proxy-agent": "^7.0.0",
     "sqlite3": "^5.1.4",
