--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "knex": "^2.4.0",
     "socks-proxy-agent": "^7.0.0",
     "sqlite3": "^5.1.4",
-    "uwuifier": "^4.0.5"
+    "uwuifier": "^4.0.5",
+    "zalgo-js": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node-lts-strictest-esm": "^18.12.1",
