push unsaved changes, might be broken

--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@sapphire/decorators": "^6.0.0",
     "@sapphire/discord.js-utilities": "^6.0.0",
     "@sapphire/fetch": "^2.4.1",
-    "@sapphire/framework": "4.x",
+    "@sapphire/framework": "^4.2.2",
     "@sapphire/plugin-subcommands": "^4.0.0",
     "@sapphire/utilities": "^3.11.0",
     "@vitalets/google-translate-api": "^9.1.0",
     "bad-words": "^3.0.4",
-    "discord-api-types": "0.37.27",
+    "discord-api-types": "^0.37.36",
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^1.7.4",
-    "discord.js": "14.x",
+    "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "env-var": "^7.3.0",
     "knex": "^2.4.0",
