--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sapphire/plugin-subcommands": "^4.0.0",
     "@sapphire/utilities": "^3.11.0",
     "@vitalets/google-translate-api": "^9.1.0",
+    "async-g-i-s": "^1.3.0",
     "bad-words": "^3.0.4",
     "discord-api-types": "^0.37.36",
     "discord-cross-hosting": "^2.3.2",
