--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
         id: prep
         run: |
           DOCKER_IMAGE=unusualnorm/omnom
-          VERSION=latest
+          VERSION=main
           SHORTREF=${GITHUB_SHA::8}
           # If this is git tag, use the tag name as a docker tag
           if [[ $GITHUB_REF == refs/tags/* ]]; then
@@ -26,9 +26,9 @@ jobs:
           TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:${SHORTREF}"
           # If the VERSION looks like a version number, assume that
           # this is the most recent version of the image and also
-          # tag it 'latest'.
+          # tag it 'main'.
           if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
+            TAGS="$TAGS,${DOCKER_IMAGE}:main"
           fi
           # Set output parameters.
           echo ::set-output name=tags::${TAGS}
