--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@sapphire/utilities": "^3.11.0",
     "@vitalets/google-translate-api": "^9.1.0",
     "async-g-i-s": "^1.3.0",
-    "bad-words": "^3.0.4",
     "discord-api-types": "^0.37.36",
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^2.1.1",
@@ -36,14 +35,14 @@
     "dotenv": "^16.0.3",
     "env-var": "^7.3.0",
     "knex": "^2.4.0",
-    "socks-proxy-agent": "^7.0.0",
     "sqlite3": "^5.1.4",
     "uwuifier": "^4.0.5",
     "zalgo-js": "^1.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node-lts-strictest-esm": "^18.12.1",
-    "@types/bad-words": "^3.0.1",
+    "@tsconfig/esm": "^1.0.2",
+    "@tsconfig/node-lts": "^18.12.1",
+    "@tsconfig/strictest": "^2.0.0",
     "@types/node": "^18.11.5",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -52,6 +51,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
     "rimraf": "^4.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.3"
   }
 }
