Add message reaction support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "experimentalDecorators": true,
     "exactOptionalPropertyTypes": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/"],
   "exclude": ["node_modules/", "dist/"]
 }
