--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "discord-hybrid-sharding": "^2.1.1",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
+    "emoji-regex": "^10.2.1",
     "env-var": "^7.3.0",
     "knex": "^2.4.0",
     "sqlite3": "^5.1.4",
