--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,12 @@ dist
 
 # Local Database
 data.db
+
+# Yarn V2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
