--- a/package.json
+++ b/package.json
@@ -20,38 +20,41 @@
   "author": "Unusual Norm",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/decorators": "^6.0.0",
-    "@sapphire/discord.js-utilities": "^6.0.5",
+    "@sapphire/decorators": "^6.0.1",
+    "@sapphire/discord.js-utilities": "^6.0.6",
     "@sapphire/fetch": "^2.4.1",
-    "@sapphire/framework": "^4.4.1",
-    "@sapphire/plugin-subcommands": "^4.0.0",
-    "@sapphire/utilities": "^3.11.0",
+    "@sapphire/framework": "^4.4.2",
+    "@sapphire/plugin-subcommands": "^4.0.1",
+    "@sapphire/utilities": "^3.11.1",
     "@vitalets/google-translate-api": "^9.1.0",
     "async-g-i-s": "^1.3.0",
-    "discord-api-types": "^0.37.38",
+    "bufferutil": "^4.0.7",
+    "discord-api-types": "^0.37.40",
     "discord-cross-hosting": "^2.3.2",
     "discord-hybrid-sharding": "^2.1.2",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
-    "env-var": "^7.3.0",
-    "knex": "^2.4.0",
-    "sqlite3": "^5.1.4",
+    "env-var": "^7.3.1",
+    "erlpack": "^0.1.4",
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.6",
+    "utf-8-validate": "^6.0.3",
     "uwuifier": "^4.0.5",
-    "zalgo-js": "^1.0.0"
+    "zlib-sync": "^0.1.8"
   },
   "devDependencies": {
-    "@tsconfig/esm": "^1.0.2",
+    "@tsconfig/esm": "^1.0.3",
     "@tsconfig/node-lts": "^18.12.1",
-    "@tsconfig/strictest": "^2.0.0",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@tsconfig/strictest": "^2.0.1",
+    "@types/node": "^18.16.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
-    "rimraf": "^4.4.1",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
   },
   "packageManager": "yarn@3.5.0"
