--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omnom",
   "version": "1.0.0",
   "description": "My not-so general purpose Discord bot, OmNom!",
-  "main": "dist/client.js",
+  "main": "dist/bot.js",
   "type": "module",
   "repository": "github:UnusualNorm/OmNom",
   "scripts": {
@@ -22,12 +22,11 @@
   "dependencies": {
     "@sapphire/decorators": "^6.0.1",
     "@sapphire/discord.js-utilities": "^6.0.6",
-    "@sapphire/fetch": "^2.4.1",
     "@sapphire/framework": "^4.4.2",
     "@sapphire/plugin-subcommands": "^4.0.1",
     "@sapphire/utilities": "^3.11.1",
     "@vitalets/google-translate-api": "^9.1.0",
-    "async-g-i-s": "^1.3.0",
+    "async-g-i-s": "https://github.com/UnusualNorm/async-g-i-s.git#commit=dbeb7e94b4674dfd58de4bae6c1807600ce5fa20",
     "bufferutil": "^4.0.7",
     "discord-api-types": "^0.37.40",
     "discord-cross-hosting": "^2.3.2",
@@ -47,7 +46,7 @@
     "@tsconfig/esm": "^1.0.3",
     "@tsconfig/node-lts": "^18.12.1",
     "@tsconfig/strictest": "^2.0.1",
-    "@types/node": "^18.16.2",
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
