--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sapphire/decorators": "^6.0.1",
     "@sapphire/discord.js-utilities": "^6.0.6",
     "@sapphire/framework": "^4.4.2",
+    "@sapphire/plugin-logger": "^3.0.4",
     "@sapphire/plugin-subcommands": "^4.0.1",
     "@sapphire/utilities": "^3.11.1",
     "@vitalets/google-translate-api": "^9.1.0",
