--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,8 @@
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
-    "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-      "packages": "docker.io"
-    }
+    "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {},
+	"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
   },
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -26,18 +25,9 @@
         "GitHub.copilot",
         "eamodio.gitlens",
         "esbenp.prettier-vscode",
-        "arcanis.vscode-zipfs",
-        "dbaeumer.vscode-eslint"
-      ],
-      "settings": {
-        "search.exclude": {
-          "**/.yarn": true,
-          "**/.pnp.*": true
-        },
-        "eslint.nodePath": ".yarn/sdks",
-        "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
-        "typescript.tsdk": ".yarn/sdks/typescript/lib"
-      }
+        "dbaeumer.vscode-eslint",
+        "Prisma.prisma"
+      ]
     }
   }
 
