--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,10 @@
 {
   "recommendations": [
-    "arcanis.vscode-zipfs",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "wayou.vscode-todo-highlight",
-    "GitHub.copilot",
-    "eamodio.gitlens"
+    "github.copilot",
+    "eamodio.gitlens",
+    "prisma.prisma"
   ]
 }
