--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,10 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
 
 yarnPath: .yarn/releases/yarn-3.5.0.cjs
+
+nodeLinker: node-modules
+
+packageExtensions:
+  "@prisma/client@*":
+    dependencies:
+      ".prisma": 'link:See "resolution" field of package.json'
