--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Unusual Norm",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "@sapphire/decorators": "^6.0.1",
     "@sapphire/discord.js-utilities": "^6.0.6",
     "@sapphire/framework": "^4.4.2",
@@ -37,7 +38,6 @@
     "emoji-regex": "^10.2.1",
     "env-var": "^7.3.1",
     "erlpack": "^0.1.4",
-    "knex": "^2.4.2",
     "sqlite3": "^5.1.6",
     "utf-8-validate": "^6.0.3",
     "uwuifier": "^4.0.5",
@@ -54,8 +54,12 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
+    "prisma": "4.13.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    ".prisma": "link:node-modules/.prisma"
   },
   "packageManager": "yarn@3.5.0"
 }
