--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "wayou.vscode-todo-highlight",
     "github.copilot",
     "eamodio.gitlens",
-    "prisma.prisma"
+    "prisma.prisma",
+    "github.vscode-github-actions"
   ]
 }
