--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+  release:
+    types: [created]
 
 jobs:
   docker:
@@ -26,9 +29,9 @@ jobs:
           TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:${SHORTREF}"
           # If the VERSION looks like a version number, assume that
           # this is the most recent version of the image and also
-          # tag it 'main'.
+          # tag it 'latest'.
           if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:main"
+            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
           fi
           # Set output parameters.
           echo ::set-output name=tags::${TAGS}
@@ -55,6 +58,6 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
