--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,3 +62,22 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
+
+      - name: Generate Image Artifact
+        run: |
+          docker save ${{ steps.prep.outputs.docker_image }} -o image.tar
+
+      - name: Upload Image Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: image
+          path: image.tar
+
+      - name: Upload to Release
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: image.tar
+          asset_name: image.tar
+          asset_content_type: application/x-tar
