--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
           if [[ $GITHUB_REF =~ ^refs/tags/ ]]; then
             VERSION=${GITHUB_REF/refs\/tags\//}
           fi
-          TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:${SHORTREF}"
+          TAGS="${DOCKER_IMAGE}:${SHORTREF},${DOCKER_IMAGE}:${VERSION}"
           # If the VERSION looks like a version number, assume that
           # this is the most recent version of the image and also
           # tag it 'latest'.
