--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,19 +22,17 @@ jobs:
         run: |
           DOCKER_IMAGE=unusualnorm/omnom
           VERSION=main
-          SHORTREF=${GITHUB_SHA::8}
-          # If this is git tag, use the tag name as a docker tag
+
           if [[ $GITHUB_REF =~ ^refs/tags/ ]]; then
             VERSION=${GITHUB_REF/refs\/tags\//}
           fi
-          TAGS="${DOCKER_IMAGE}:${SHORTREF},${DOCKER_IMAGE}:${VERSION}"
-          # If the VERSION looks like a version number, assume that
-          # this is the most recent version of the image and also
-          # tag it 'latest'.
+
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+
           if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
             TAGS="$TAGS,${DOCKER_IMAGE}:latest"
           fi
-          # Set output parameters.
+
           echo ::set-output name=tags::${TAGS}
           echo ::set-output name=docker_image::${DOCKER_IMAGE}
       
